# review_sessions

./: README.md  sonar-project.properties
18/SpringGradleFirst-master/: pom.xml
18/algorithms-master/: .gitignore  CNAME  README.md  _config.yml  settings.gradle
18/english-teacher-master/: README.md
18/ionic-vue-template-master/: .eslintrc.js  .prettierrc  Dockerfile  babel.config.js  capacitor.config.json  ionic.config.json  package-lock.json  package.json
18/page_clock-main/: index.html
18/shop-card-main/: package-lock.json  package.json
18/test-main/: README.md  package-lock.json  package.json
JS/Test1/: Aclass.js  Class1.js  Class2.js  README.md  app.js  index.html
Kotlin/MoneyConvertor/: README.md  build.gradle  settings.gradle
PHP/laravel-organizing-requests/: README.md
Python/ReviewSession19/crypto-address-validator-master/: .flake8  .gitignore  README.md  pyproject.toml
Python/ReviewSession19/crypto-address-validator-master/crypto_address_validator/: __init__.py
Python/ReviewSession19/crypto-address-validator-master/crypto_address_validator/validators/: aion_validator.py  atom_validator.py  bnb_validator.py  default_validator.py  eos_validator.py  iost_validator.py  miota_validator.py
Python/ReviewSession19/crypto-address-validator-master/tests/: pytest.ini  test_aion_validator.py  test_atom_validator.py  test_bnb_validator.py  test_btc_validator.py  test_crypto_address_validator.py  test_eos_validator.py  test_iost_validator.py  test_miota_validator.py
Python/TestWorkPlaceProject/: README.md  config.py  main.py  requirements.txt
(+1222 files in other folders)
